[tool.poetry]
name = "nothanks"
version = "0.1.0"
description = ""
authors = ["Florian <florian@notion.ai>"]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.9.3"
np = "^1.0.2"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
